# Q4_25_Builder_Light

./: .gitignore
Capstone/AnchorSentry-StaticAnalyzer/: Cargo.toml  README.md
Capstone/AnchorSentry-StaticAnalyzer/examples/: example_program.rs
Capstone/AnchorSentry-StaticAnalyzer/examples/sample-program/: Anchor.toml  package.json  sample-keypair.json
Capstone/AnchorSentry-StaticAnalyzer/examples/sample-program/programs/sample-program/: Cargo.toml
Capstone/AnchorSentry-StaticAnalyzer/examples/sample-program/programs/sample-program/src/: lib.rs
Capstone/AnchorSentry-StaticAnalyzer/src/: lib.rs  main.rs  old.rs
Capstone/AnchorSentry-StaticAnalyzer/src/analyzer/: mod.rs  normalize.rs
Capstone/AnchorSentry-StaticAnalyzer/src/analyzer/rules/: mod.rs  rule_init_if_needed.rs  rule_missing_account_verification.rs  rule_missing_fn_arg.rs  rule_wrong_space_assignment.rs
Capstone/AnchorSentry-StaticAnalyzer/src/analyzer/rules/visit/: mod.rs  rule_division_by_zero.rs
Capstone/AnchorSentry-StaticAnalyzer/src/report/: knowledge_base.rs  line_counter.rs  mod.rs  report.rs
Capstone/AnchorSentry-StaticAnalyzer/src/state/: mod.rs  state.rs
StaticAnalyzer/: notes.txt  output.json
StaticAnalyzer/syn-test/: Cargo.toml  ast_output.json  escrow-ast-raw.txt  escrow-ast.json  escrow-ast.txt  escrow-ast2.json  test.txt
StaticAnalyzer/syn-test/src/: knowledge_base.rs  line_counter.rs  main.rs  make.rs  program.rs  report.rs  state.rs  tiny-program.rs  treesitter-ez.rs
airdrop/: .gitignore  TS Client Logic.md  airdrop.ts  enroll.ts  keygen.js  keygen.ts  package.json  transfer.ts
airdrop2/: README.md
(+24 files in other folders)
