[package]
name = "AnchorSentry-StaticAnalyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn-serde = { version = "0.3", features = ["json"] }
evalexpr = "13.0.0"
chrono = { version = "0.4", features = ["clock"] }
syn = { version = "2.0.109", features = ["full", "extra-traits", "visit", "parsing"] }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
log = "0.4"
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive"] }


[[bin]]
name = "anchor-sentry"
path = "src/main.rs"